--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  
-    <label>
-        name:
-        <input type="text" id="nameChange">
-    </label>
-    <label>
-        Coutry:
-        <select  id="coutryChange" >
-            <option value="nederland">Nederland</option>
-            <option value="duitsland">Duitsland</option>
-            <option value="belgie">Belgie</option>
-            </select>
-    </label>
-    <p id="output"></p>
-    
 
-    <script src="app.js"></script>
-    </body>
-    </html>
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Angry Bird</title>
+</head>
+
+<body>
+  <img src="img/b-right.svg" class="bird" alt="angry-bird">
+  <script src="app.js"></script>
+</body>
+
+</html>
