--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    // Script src in de header?
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
     <title>Basic Tetris</title>
@@ -10,6 +11,9 @@
 
     <h3>Score:<span id="score">0</span></h3>
     <button id="startButton">Start/Pause</button>
+    // Uitleg toevoegen waarom je zoveel div's hebt, kan dit ook niet op een andere manier?
+    // Comments?
+    // Heb je je nieuwe code gepusht naar git? Van vandaag.
 
     <div class="container">
       <div class="grid">
